--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -491,6 +491,7 @@ main {
 
 
 
+
 /*-----------------------------------*\
   #ABOUT
 \*-----------------------------------*/
@@ -560,12 +561,14 @@ main {
  * #testimonials 
  */
 
-.testimonials { margin-bottom: 30px; }
+.testimonials {
+  display:none;
+  margin-bottom: 30px; }
 
 .testimonials-title { margin-bottom: 20px; }
 
 .testimonials-list {
-  display: flex;
+  display:flex;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 15px;
@@ -726,7 +729,9 @@ main {
  * #clients 
  */
 
-.clients { margin-bottom: 15px; }
+.clients { 
+  display:none;
+  margin-bottom: 15px; }
 
 .clients-list {
   display: flex;
@@ -1408,7 +1413,8 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   /* testimonials */
 
-  .testimonials-title { margin-bottom: 25px; }
+  .testimonials-title { 
+    margin-bottom: 25px; }
 
   .testimonials-list {
     gap: 30px;
@@ -1880,3 +1886,5 @@ textarea.form-input::-webkit-resizer { display: none; }
   .timeline-text { max-width: 700px; }
 
 }
+
+
